--- a/fontello/config.json
+++ b/fontello/config.json
@@ -301,34 +301,6 @@
       ]
     },
     {
-      "uid": "0ddad33f8ebfccd4a2e85c291d5b778c",
-      "css": "gmail_1x",
-      "code": 59416,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M909.1 732.1L909 287.6 909 267.9C909 230.6 878.8 200 842 200L159.1 200C121.1 200 90.9 230.6 90.9 268L90.9 732.1C90.9 769.4 121.1 800 157.9 800L840.9 800C891.5 794.1 907.7 775.1 909.1 732.1ZM816.1 766.7L815.9 355 815.9 355.1 498.8 576.4 181.8 352.8 181.8 766.7 816.1 766.7ZM797.3 233.3L498.8 456.2 202.3 233.3 797.3 233.3 797.3 233.3Z",
-        "width": 1000
-      },
-      "search": [
-        "gmail_1x"
-      ]
-    },
-    {
-      "uid": "41d7f4d34717fc5411b71e9a495a9fcd",
-      "css": "gmail",
-      "code": 59417,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M909.1 732.1L909 287.6 909 267.9C909 230.6 878.8 200 842 200L159.1 200C121.1 200 90.9 230.6 90.9 268L90.9 732.1C90.9 769.4 121.1 800 157.9 800L840.9 800C891.5 794.1 907.7 775.1 909.1 732.1ZM816.1 766.7L815.9 355 815.9 355.1 498.8 576.4 181.8 352.8 181.8 766.7 816.1 766.7ZM797.3 233.3L498.8 456.2 202.3 233.3 797.3 233.3 797.3 233.3Z",
-        "width": 1000
-      },
-      "search": [
-        "gmail"
-      ]
-    },
-    {
       "uid": "af64d34051539f31e2cb625cad5c5eee",
       "css": "home_1x",
       "code": 59418,
@@ -774,6 +746,48 @@
       },
       "search": [
         "x"
+      ]
+    },
+    {
+      "uid": "bbbf0d3e787635d0c4f9e1b26ce6687b",
+      "css": "gmail_1x",
+      "code": 59417,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M909.1 732.1L909 287.6 909 267.9C909 230.6 878.8 200 842 200L159.1 200C121.1 200 90.9 230.6 90.9 268L90.9 732.1C90.9 769.4 121.1 800 157.9 800L840.9 800C891.5 794.1 907.7 775.1 909.1 732.1ZM782.7 733.3L782.6 355 498.8 576.4 215.1 352.8 215.1 733.3 782.7 733.3ZM498.8 489.5L235.6 266.7 764 266.7 498.8 489.5Z",
+        "width": 1000
+      },
+      "search": [
+        "gmail_1x"
+      ]
+    },
+    {
+      "uid": "416af5339bbd77f2873498ae0f44f7e1",
+      "css": "gmail",
+      "code": 59416,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M909.1 732.1L909 287.6 909 267.9C909 230.6 878.8 200 842 200L159.1 200C121.1 200 90.9 230.6 90.9 268L90.9 732.1C90.9 769.4 121.1 800 157.9 800L840.9 800C891.5 794.1 907.7 775.1 909.1 732.1ZM782.7 733.3L782.6 355 498.8 576.4 215.1 352.8 215.1 733.3 782.7 733.3ZM498.8 489.5L235.6 266.7 764 266.7 498.8 489.5Z",
+        "width": 1000
+      },
+      "search": [
+        "gmail"
+      ]
+    },
+    {
+      "uid": "8d5b97901046f68a075156d2cbb5db88",
+      "css": "gmail-1",
+      "code": 59451,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M804.3 804.5L833.2 804.5C870.1 804.5 900 774.7 900 738L900 237.8C900 200.9 876.2 189 846.9 211L500 471.2 153.1 211C123.8 189.1 100 201 100 237.8L100 738C100 774.8 129.9 804.5 166.8 804.5L183 804.5 804.3 804.5 804.3 804.5 804.3 804.5ZM199.1 738L199.1 704.5 199 704.5 199 368.1 500 596.2 800 368.1 800 684.2 800 738 199.1 738 199.1 738 199.1 738ZM877.5 200C877.5 200 133.9 200.1 125.9 200 110.4 200 100 213.5 100 237.8 100 237.8 123.4 237.8 135.1 237.8 141.1 237.8 854.7 237.8 854.7 237.8L877.5 200 877.5 200Z",
+        "width": 1000
+      },
+      "search": [
+        "gmail"
       ]
     },
     {
